Add candles endpoint
